# stt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.json  install-review.sh  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.mjs
.githooks/: pre-push
docs/: BACKLOG.md  ui-contract.md
electron/: credentials.js  llm-service.js  macos-permissions.js  main.js  preload.js  shell-credentials.js  text-inserter.js
lt-memory/: architecture.md  pitfalls.md  ui-ux.md
scripts/: bootstrap-local-review-signing-cert.sh  install-git-hooks.sh  release.sh  sign-macos-app.sh
src/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src/capabilities/: bar.json  default.json
src/icons/: icon.icns
src/permissions/autogenerated/: check_permissions_status.toml  consume_pending_mic_toggle.toml  copy_to_clipboard.toml  correct_transcript.toml  create_soniox_temporary_key.toml  ensure_accessibility_permission.toml  ensure_microphone_permission.toml  ensure_text_insertion_permission.toml  fit_main_window_to_content.toml  get_mic_toggle_shortcut.toml  get_platform_runtime_info.toml  get_soniox_key.toml  has_openai_compatible_key.toml  has_soniox_key.toml  has_xai_key.toml  hide_bar.toml  insert_text.toml  list_soniox_models.toml  relaunch_app.toml  reset_credentials.toml  save_credentials.toml  set_mic_state.toml  set_mouse_events.toml  show_bar.toml  show_settings.toml  update_mic_toggle_shortcut.toml  update_openai_compatible_key.toml  update_soniox_key.toml  update_xai_key.toml
src/src/: commands.rs  credentials.rs  focus_target.rs  helper_mode.rs  lib.rs  llm_service.rs  macos_app_shell.rs  main.rs  permissions.rs  platform_app_shell.rs  platform_runtime_info.rs  shell_credentials.rs  soniox_auth.rs  soniox_models.rs  text_inserter.rs  windows_app_shell.rs  windows_inserter.rs  windows_permissions.rs
src/tests/: command_bridge_contract.rs  native_services.rs  runtime_platform_contract.rs  text_insertion_permissions.rs  window_shell.rs  windows_shell_runtime.rs  windows_text_insertion.rs
tests/: bar-renderer.test.js  (+8 more)
ui/: bar.html  (+13 more)
(+125 files in other folders)
